Compressão, Tração e Cortante OK!

--- a/memorial.tex
+++ b/memorial.tex
@@ -80,7 +80,30 @@ Esbeltez limite da alma:%
 \]%
 Largura efetiva da alma:%
 \[%
- b_{ef} = b \cdot \left( 1 - c_1 \cdot \sqrt{\frac{\sigma_{el}}{\chi \cdot f_y}} \right) \cdot \sqrt{\frac{\sigma_{el}}{\chi \cdot f_y}} %
+ b_{ef} = 11.80 \ cm%
+\]%
+Esbeltez da mesa:%
+\[%
+\frac{b}{t} = \frac{5.00}{0.49} = 10.20 
+%
+\]%
+Esbeltez limite da mesa:%
+\[%
+\frac{0.56 \cdot \sqrt{\frac{E}{f_y}}}{\sqrt{\chi}}  = \frac{0.56 \cdot \sqrt{\frac{20000}{34.50}}}{\sqrt{0.28}}  = 25.69 
+%
+\]%
+Largura efetiva da mesa:%
+\[%
+ b_{ef} = 5.00 \ cm%
+\]%
+Área efetiva:%
+\[%
+ A_{ef} = 16.60 \ {cm}^2%
+\]%
+Força axial resistente de cálculo:%
+\[%
+ N_{c,rd} = \frac{\chi \cdot A_{ef} \cdot f_y}{1.10}  = \frac{0.28 \cdot 16.60 \cdot 34.50}{1.10}  = 143.386   kN 
+%
 \]
 
 %
