Memorial de tração, compressão e cortantes X e Y, OK !

--- a/memorial.tex
+++ b/memorial.tex
@@ -111,8 +111,8 @@ Força axial resistente de cálculo:%
 \label{sec:ClculodaForaCortante}%
 
 %
-\subsection{Cálculo da Força Resistente a Cortante em X (Item 5.4.3.1.1)}%
-\label{subsec:ClculodaForaResistenteaCortanteemX(Item5.4.3.1.1)}%
+\subsection{Cálculo da Força Resistente a Cortante em X (Item 5.4.3.1)}%
+\label{subsec:ClculodaForaResistenteaCortanteemX(Item5.4.3.1)}%
 Área efetiva de cisalhamento:%
 \[%
 A_w = d' \cdot t_w = (11.80 \cdot 0.43) = 5.07    {cm}^2%
@@ -123,19 +123,51 @@ V_{pl} = 0.6 \cdot A_w \cdot f_y = 0.6 \cdot 5.07 \cdot 34.50 = 105.03    kN%
 \]%
 Esbeltez do perfil:%
 \[%
-\lambda = \frac{d'}{t_w} = \frac{11.80}{0.43} = 27%
+\lambda = \frac{d'}{t_w} = \frac{11.80}{0.43} = 27.44%
 \]%
 Lambda P:%
 \[%
-\lambda_p = 1.10 \cdot \sqrt{\frac{{k_v \cdot E}}{{f_y}}} = 1.10 \cdot \sqrt{\frac{{5 \cdot 20000}}{{34.50}}} = 59.22   ~   kN%
+\lambda_p = 1.10 \cdot \sqrt{\frac{{k_v \cdot E}}{{f_y}}} = 1.10 \cdot \sqrt{\frac{{5 \cdot 20000}}{{34.50}}} = 59.22 %
 \]%
 Lambda R:%
 \[%
-\lambda_r = 1.37 \cdot \sqrt{\frac{{k_v \cdot E}}{{f_y}}} = 1.37 \cdot \sqrt{\frac{{5 \cdot 20000}}{{34.50}}} = 73.76   ~   kN%
+\lambda_r = 1.37 \cdot \sqrt{\frac{{k_v \cdot E}}{{f_y}}} = 1.37 \cdot \sqrt{\frac{{5 \cdot 20000}}{{34.50}}} = 73.76 %
 \]%
 Força cortante resistente:%
 \[%
-V_{rd} = 1.24 \cdot \left(\frac{\lambda_p}{\lambda}\right)^2 \cdot \frac{V_{pl}}{1.10}  = 1.24 \cdot \left(\frac{59}{100}\right)^2 \cdot \frac{105.03}{1.10} = 95.48   ~   kN%
+V_{rd} = \frac{V_{pl}}{1.10}  = \frac{105.03}{1.10} = 95.48   ~   kN%
+\]
+
+%
+\subsection{Cálculo da Força Resistente a Cortante em Y (Item 5.4.3.5)}%
+\label{subsec:ClculodaForaResistenteaCortanteemY(Item5.4.3.5)}%
+Área efetiva de cisalhamento:%
+\[%
+A_w = 2 \cdot b_f \cdot t_f = 2 \cdot 10.00 \cdot 0.49  = 9.80    {cm}^2%
+\]%
+Força cortante de plastificação:%
+\[%
+V_{pl} = 0.6 \cdot A_w \cdot f_y = 0.6 \cdot 9.80 \cdot 34.50 = 202.86    kN%
+\]%
+Valor de 'h':%
+\[%
+h = \frac{b_f}{2} = \frac{10.00}{2} = 5.00 \ cm%
+\]%
+Esbeltez do perfil:%
+\[%
+\lambda = \frac{h}{t_w} = \frac{5.00}{0.43} = 11.63%
+\]%
+Lambda P:%
+\[%
+\lambda_p = 1.10 \cdot \sqrt{\frac{{k_v \cdot E}}{{f_y}}} = 1.10 \cdot \sqrt{\frac{{1.2 \cdot 20000}}{{34.50}}} = 29.01%
+\]%
+Lambda R:%
+\[%
+\lambda_r = 1.37 \cdot \sqrt{\frac{{k_v \cdot E}}{{f_y}}} = 1.37 \cdot \sqrt{\frac{{1.2 \cdot 20000}}{{34.50}}} = 36.13 %
+\]%
+Força cortante resistente:%
+\[%
+V_{rd} = \frac{V_{pl}}{1.10}  = \frac{202.86}{1.10} = 184.42   ~   kN%
 \]
 
 %
