--- a/memorial.tex
+++ b/memorial.tex
@@ -171,4 +171,56 @@ V_{rd} = \frac{V_{pl}}{1.10}  = \frac{202.86}{1.10} = 184.42   ~   kN%
 \]
 
 %
+\section{Cálculo do Momento Fletor}%
+\label{sec:ClculodoMomentoFletor}%
+
+%
+\subsection{Cálculo do momento fletor resistente (Item D.2.1)}%
+\label{subsec:Clculodomomentofletorresistente(ItemD.2.1)}%
+Momento fletor de plastificação: %
+\[%
+M_{pl} = z_x \cdot f_y = 96.40 \cdot 34.50 = 3325.80 \  \text{kN} \cdot \text{cm}^2%
+\]%
+Momento fletor residual: %
+\[%
+M_{r} = 0.7 \cdot w_x \cdot f_y = 0.7 \cdot 85.80 \cdot 34.50 = 2072.07 \  \text{kN} \cdot \text{cm}^2%
+\]%
+Flambagem local da alma {-} FLA:%
+\[%
+\lambda = \frac{d'}{t_w} = \frac{11.80}{0.43}  = 27.44 %
+\]%
+Lambda P:%
+\[%
+\lambda_p = 3.76 \cdot \sqrt{\frac{E}{f_y}} = 3.76 \cdot \sqrt{\frac{20000}{34.50}} = 90.53%
+\]%
+Lambda R:%
+\[%
+\lambda_r = 5.70 \cdot \sqrt{\frac{E}{f_y}} = 5.70 \cdot \sqrt{\frac{20000}{34.50}} = 137.24%
+\]%
+Momento fletor resistente:%
+\[%
+M_{rd} = \frac{M_{pl}}{1.10} = \frac{3325.80}{1.10} = 3023.45 \  \text{kN} \cdot \text{cm}^2%
+\]%
+Flambagem local da mesa {-} FLM:%
+\[%
+\lambda = \frac{b_f}{2 \cdot t_f} = \frac{10.00}{0.49}  = 10.20 %
+\]%
+Lambda P:%
+\[%
+\lambda_p = 0.38 \cdot \sqrt{\frac{E}{f_y}} = 0.38 \cdot \sqrt{\frac{20000}{34.50}} = 9.15%
+\]%
+Lambda R:%
+\[%
+\lambda_r = 0.83 \cdot \sqrt{\frac{E}{0.7 \cdot f_y}} = 5.70 \cdot \sqrt{\frac{20000}{0.7 \cdot 34.50}} = 23.89%
+\]%
+Momento fletor resistente:%
+\[%
+M_{rd} = \frac{1}{1.10} \cdot \left( M_{pl} - \left( M_{pl} - M_r \right) \cdot \frac{\lambda - \lambda_p}{\lambda_r - \lambda_p} \right)  = \frac{1}{1.10} \cdot \left( 3325.80 - \left( 3325.80 - 2072.07 \right) \cdot \frac{10.20 - 9.15}{23.89 - 9.15} \right)  = 2941.88 \  \text{kN} \cdot \text{cm}^2 %
+\]%
+Flambagem lateral com torção {-} FLT:%
+\[%
+\lambda = \frac{L_b}{r_y} = \frac{300.00}{2.22} = 10.20 %
+\]
+
+%
 \end{document}
